refactor: introduce CommandArguments as a typed domain primitive
  Replace List<String> in Command.run() with CommandArguments, a narrow
  immutable wrapper whose CommandArgument inner class exposes typed
  accessors: asString(), asKey(), asLong(), asInt(), asDuration().

  This eliminates manual Long.parseLong, Integer.parseInt, Keys.of(...),
  and DurationParsing.parse() call sites across all modules. Compiler's
  Resolvable.resolve() now returns CommandArgument directly, removing the
  wasteful String→Value→String conversion in the interpreter hot path.

  DurationParsing is deleted; its logic is absorbed into asDuration().